--- a/src/components/hero/swiper.css
+++ b/src/components/hero/swiper.css
@@ -1,8 +1,8 @@
-.swiper {
+/* .swiper {
     width: 100%;
     height: 100%;
 
-}
+} */
 
 .swiper-slide {
 
@@ -16,7 +16,7 @@
 .swiper-slide img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 512px;
     object-fit: cover;
     cursor: grab;
 }
