--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,50 @@ a{
 
 }
 
+.headeraaaaaa {
+  background-color: rgba(255, 255, 255, 0.8); /* خلفية شفافة */
+  backdrop-filter: blur(10px); /* تأثير التمويه */
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* ظل خفيف */
+}
+
+.navbar-collapse  {
+  background: linear-gradient(36000deg, rgba(255, 166, 0, 0.25), rgba(0, 0, 0, 0.07));
+  backdrop-filter: blur(2px);
+  position: absolute;
+  right: 0;
+  /* top: 50px; */
+  /* width: 100%; */
+  /* height: 100vh; */
+  /* z-index: 100; */
+   transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+  align-items: center;
+  transform-origin: center;
+  margin: auto;
+  /* padding-top: 80px; */
+}
+
+.card-box {
+  position: absolute;
+  bottom: -20px;
+  left: 0px;
+  width: 100% !important;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 10px;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.card:hover .card-box {
+  opacity: 1;
+  bottom: 0px;
+}
